# mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sierpinsky.c
RPN Calculator/: reverse_polish_calculator.c  rpn  rpn.c
directory_content_copier/: README.md  source.c
include/: color_mapping.h  mandelbrot.h  thread_pool.h
mandelbrot/: CMakeLists.txt  Tests.cmake  mandelbrot.c
mandelbrot/include/: color_mapping.h  mandelbrot.h  thread_utils.h
mandelbrot/palletes/palletepacks/: film_mut.txt
mandelbrot/plotting/buffer_array_double_write_loops_6_threads/runtime/: data.csv
mandelbrot/plotting/legacy_singlecore/diverge_per_pixel/: diverge_data_mandelbrot_0_5.csv  diverge_data_seastar_0_5.csv
mandelbrot/plotting/runtime/: data.csv  heatmap_plot.py
mandelbrot/src/: color_mapping.c  main.c  mandelbrot.c  thread_utils.c
mandelbrot/tests/: Tests.cmake
mandelbrot/tests/baseline_gtest_results/: baseline_1_threads_bruteforce.csv  baseline_6_threads_bruteforce.csv  baseline_6_threads_current.csv
mandelbrot/tests/performance/: image_generation.cpp  multithread_stress_compute.cpp  test_mandelbrot.cpp
mandelbrot/tests/scripts/: cpu_profiler_gperftools.sh  memcheck_valgrind.sh  process_gtest_xml_output.py  stack_usage.sh
matrice_parcursa_serpuit/: matrice_parcursa_serpuit.c  matrice_serpuita_5x5.in  matrice_serpuita_6x6.in  matrice_serpuita_6x9.in
palettes/palette_packs/: multe_nuante_as_spune.txt  picior_de_lemn_ud_12.txt  putine_culori_dar_final_fericit.txt  rochiile_bunicii.txt
palletes/palletepacks/: the_og.txt
pictures/: .gitattributes
plotting/legacy_singlecore/diverge_per_pixel/: .gitattributes  diverge_data_galaxy_2.csv  diverge_data_galaxy_4.csv  diverge_data_mandelbrot_0_5.csv  diverge_data_mandelbrot_1.csv  diverge_data_mandelbrot_2.csv  diverge_data_seastar_0_5.csv  diverge_data_seastar_2.csv  diverge_data_shells_2.csv  diverge_data_stuff_2.csv
plotting/runtime/: line_plot.py
plotting/scripts/: data.csv  diverge_plot.py  line_plot.py
sierpinsky/: sierpinsky.c
src/: color_mapping.c  main.c  mandelbrot.c  thread_pool.c  thread_utils.c
tests/: Tests.cmake
tests/baseline_gtest_results/: baseline_6_threads_bruteforce.csv  baseline_singlecore.csv  multithreaded_mandatory.xml
tests/performance/: image_generation.cpp  multithread_stress_compute.cpp
tests/scripts/: analyze_tests.py  process_gtest_xml_output.py
